kubernetes/stress.yaml
apiVersion: v1
kind: Pod
metadata:
  name: stress-pod
spec:
  containers:
  - name: stress
    image: polinux/stress
    args: ["--cpu", "2", "--timeout", "300s"]
